--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
